project1/test/test_11811712_2.out
Error type B at Line 3: Missing semicolon ';'
Error type B at Line 9: Missing closing parenthesis ')'
Error type B at Line 14: Missing specifier
Error type B at Line 19: Missing semicolon ';'
